src/objects/GeolocationMetadataDeploy__e.object
<CustomObject>
    <fields>
        <fullName>CustomMetadataQualifiedApiName__c</fullName>
        <label>Custom Metadata Qualified Api Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeployError__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deploy Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Geolocation Metadata Deploy</label>
    <pluralLabel>Geolocation Metadata Deploy</pluralLabel>
</CustomObject>